Kode 6 og 7 (#384)
Kode 6 og 7 kan opprettes av arbeidsgiver (ikke lansert ennå).

Kode 6 og 7 sperres for opprettelse av veileder.

Kode 6 sperres for godkjennelse av veileder.

Flytter logikk fra InnloggetBruker-subklassene, disse er nå rene DTOer, til Avtalepart-subklassene. Tilgangskontroll kun på skrivetilgang for alle operasjoner.

Co-authored-by: Sindre Løken <sindre.loken@nav.no>